# langchain-smartMenu

./: .gitignore  README.md  main.py  menu.sql  postgres-menu.sql  pyproject.toml  redis_demo.py
agent/: langchain_assistant.py  langchain_assitant.py  milvus_data_sync.py  redis_data_sync.py  redis_demo.py
agent/prompts/: system_prompt.txt
api/: main.py
ui/: pnpm-lock.yaml
